# Aphrodite

./: .gitignore  Cargo.toml
experiments/: main2.rs  main3.rs
src/: main.rs  main2.rs
src/AphroditeCore/: engine.rs  mod.rs
src/EngineCore/: connection.rs  engine.rs  mod.rs
src/aphrodite_core/: engine.rs  image.wgsl
src/windowed_mode/: window.rs
