[package]
name = "aphrodite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo = "0.0.4"
image = "0.24.6"
smithay = {version = "0.3.0", features=["backend_winit", "renderer_gl", "wayland_frontend"]}
smithay-client-toolkit = "0.17.0"
wayland-client = "0.30.1"
wayland-protocols = {version="0.30.0", features=["client"]}

winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"