[package]
name = "aphrodite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo = "0.0.4"
image = "0.24.6"
smithay = {version = "0.3.0", features=["backend_winit", "renderer_gl", "wayland_frontend"]}
smithay-client-toolkit = {version = "0.17.0" }
wayland-client = "0.30.1"
wayland-protocols = {version="0.30.0", features=["client"]}
wayland-backend = {version = "0.1.0", features=["client_system"]}


winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.15"
raw-window-handle = "0.5.2"
pollster = "0.2.5"
raqote = "0.8.2"
# unix = "0.6.12"


bytemuck = "1.13.0"
font-kit = "0.11.0"
color-eyre = "0.6.2"



[build-dependencies]
pkg-config = { version = "0.3", optional = true }



# [dependencies]
# bitflags = "1.0"
# cursor-icon = "1.0.0"
# dlib = "0.5"
# log = "0.4"
# memmap2 = "0.7.0"
# nix = { version = "0.26.1", default-features = false, features = ["fs", "mman"] }
# thiserror = "1.0.30"
# wayland-backend = {version = "0.1.0", features=["client_system"]}
# wayland-client = "0.30.2"
# wayland-cursor = "0.30.0"
# wayland-protocols = { version = "0.30.1", features = ["client", "staging", "unstable"] }
# wayland-protocols-wlr = { version = "0.1.0", features = ["client"] }
# wayland-scanner = "0.30.0"
# # wayland-csd-frame = { version = "0.2.2", default-features = false, features = ["wayland-backend_0_1"] }
# # smithay-client-toolkit = {version = "0.17.0" }
# smithay-client-toolkit = { git = "https://github.com/Smithay/client-toolkit.git", branch = "master" }


# xkbcommon = { version = "0.5", optional = true, features = ["wayland"] }
# calloop = { version = "0.10.5", optional = true }

# wgpu = "0.15.0"
# bytemuck = "1.13.0"
# font-kit = "0.11.0"
# image = "0.23"
# env_logger = "0.9"
# raqote = "0.8.2"
# raw-window-handle = "0.5.2"
# pollster = "0.2.5"

# [build-dependencies]
# pkg-config = { version = "0.3", optional = true }

