[package]
name = "aphrodite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cairo = "0.0.4"
image = "0.24.6"
smithay = {version = "0.3.0", features=["backend_winit", "renderer_gl", "wayland_frontend"]}
smithay-client-toolkit = {version = "0.17.0" }
wayland-client = "0.30.1"
wayland-protocols = {version="0.30.0", features=["client"]}
wayland-backend = {version = "0.1.0", features=["client_system", "raw-window-handle"]}
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.17"
raw-window-handle = "0.5.2"
pollster = "0.3.0"
raqote = "0.8.2"
bytemuck = "1.13.0"
font-kit = "0.11.0"
color-eyre = "0.6.2"


[build-dependencies]
pkg-config = { version = "0.3", optional = true }
